--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,21 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
+body{
+  width: 100%;
+  height: 100%;
+}
+#root{
+  height: 100% !important;
+  width: 100% !important;
+  position: absolute;
+}
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
@@ -35,4 +43,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
