--- a/src/Styles/Auth.css
+++ b/src/Styles/Auth.css
@@ -41,3 +41,12 @@
     margin: 10px 0;
     display: block;
 }
+.errorBlockHide{
+    display: none;
+}
+.spinner-hide{
+    display: none
+}
+.spinner-show{
+    display: block
+}
