--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -11,7 +11,14 @@
         height: 50%
     }
     .allTasksRow{
-        height: 50%
+        height: 50%;
+        justify-content: space-between;
+    }
+    .body-container{
+        position: absolute;
+    }
+    .btn-up, .btn-bot{
+        display: none
     }
 }
 @media (min-width: 700px) and (max-width: 1000px) {
@@ -27,11 +34,14 @@
         width: 50px;
         height: 50px;
     }
-    .newTaskRow{
-        height: 40%
+    .body-container{
+        position: relative;
     }
     .allTasksRow{
-        height: 60%
+        justify-content: space-between;
+    }
+    .btn-left, .btn-right{
+        display: none
     }
 }
 @media (min-width: 100px) and (max-width: 700px) {
@@ -46,11 +56,14 @@
         width: 50px;
         height: 50px;
     }
-    .newTaskRow{
-        height: 30%
+    .body-container{
+        position: relative;
     }
     .allTasksRow{
-        height: 70%
+        justify-content: center;
+    }
+    .btn-left, .btn-right{
+        display: none
     }
 }
 
@@ -84,7 +97,7 @@
 .body-container{
     width: 100%;
     height: 100%;
-    position: absolute;
+    background-color: rgb(12, 79, 110);
 }
 .footer-container{
     width: 100%;
@@ -122,6 +135,7 @@
     background-repeat: no-repeat;
 }
 
+/*new task*/
 .newTaskRow{
     width: 100% !important;
 }
@@ -132,14 +146,14 @@
     box-shadow: 0 0 10px rgb(109, 109, 109);
 }
 
+/*all tasks*/
 .allTasksRow{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
     border-top: 1px solid rgba(19, 96, 131, 0.568); 
 }
 .taskItem{
-    padding: 10px
+    padding: 10px;
 }
 .card{
     width: 300px
@@ -153,9 +167,7 @@
     height: 50px;
     display: flex;
     align-items: center;
-    /* justify-content: space-evenly; */
     justify-content: flex-end;
-    /* justify-content: space-between; */
 }
 .priorityColor{
     width: 30px;
@@ -176,9 +188,7 @@
     width: 30px;
     height: 30px;
 }
-/* .priorityList{
-    width: 90%;
-} */
+
 .redOption{
     width: 20px;
     height: 20px;
@@ -188,6 +198,21 @@
     background-color: khaki;
 }
 
+/*increment and decrement buttons*/
+.inc-decr-btn-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-active{
+    background-color: rgb(255, 255, 255);
+    transition: 0.8s;
+}
+.btn-active:hover{
+    background-color: rgb(199, 199, 199);
+}
+
+/*footer*/
 .footerRow{
     width: 100%;
     height: 7%;
@@ -202,5 +227,3 @@
     height: 20px;
     margin: 10px
 }
-
-
