--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -228,3 +228,14 @@
     height: 20px;
     margin: 10px
 }
+
+
+.testik:active{
+    background-color: cyan;
+    cursor: pointer !important;
+}
+.testik:focus{
+    background-color: rgb(238, 255, 0);
+    cursor: move;
+    cursor: move !important;
+}
