--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -62,6 +62,9 @@
     .allTasksRow{
         justify-content: center;
     }
+    .choice-btn-group{
+        margin-top: 20px
+    }
     .btn-left, .btn-right{
         display: none
     }
@@ -148,6 +151,18 @@
     background-color: gainsboro;
     box-shadow: 0 0 10px rgb(109, 109, 109);
 }
+/*sort and filter*/
+.choice-btn-group{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 200px
+}
+.btn-sort-group{
+    width: 100%;
+    margin-bottom: 30px;
+}
 
 /*all tasks*/
 .allTasksRow{
@@ -230,15 +245,4 @@
     width: 20px;
     height: 20px;
     margin: 10px
-}
-
-
-.testik:active{
-    background-color: cyan;
-    cursor: pointer !important;
-}
-.testik:focus{
-    background-color: rgb(238, 255, 0);
-    cursor: move;
-    cursor: move !important;
 }
