--- a/src/Styles/Auth.css
+++ b/src/Styles/Auth.css
@@ -32,7 +32,7 @@
     position: absolute;
 }
 .whiteText{
-    color: white
+    color: white;
 }
 .hr-line{
     background-color: rgb(253, 252, 252);
